--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <img src="./image/img1.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">MAGIC SLIDER</div>
-                    <div class="type">FLOWER</div>
+                    <div class="title">GALERY SLIDE</div>
+                    <div class="type">FRIEXLIFE</div>
                     <div class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                        Ibham Ganteng🐼
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -44,10 +44,10 @@
                 <img src="./image/img2.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">MAGIC SLIDER</div>
-                    <div class="type">NATURE</div>
+                    <div class="title">GALERY SLIDE</div>
+                    <div class="type">FRIEXLIFE</div>
                     <div class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                        Ibham Ganteng🐼
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -59,10 +59,10 @@
                 <img src="./image/img4.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">MAGIC SLIDER</div>
-                    <div class="type">PLANT</div>
+                    <div class="title">GALERY SLIDE</div>
+                    <div class="type">FRIEXLIFE</div>
                     <div class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                        Ibham Ganteng🐼
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -74,10 +74,10 @@
                 <img src="./image/img3.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">MAGIC SLIDER</div>
-                    <div class="type">NATURE</div>
+                    <div class="title">GALERY SLIDE</div>
+                    <div class="type">FRIEXLIFE</div>
                     <div class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                        Ibham Ganteng🐼
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
