--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>© by Ibham Ganteng🐼</title>
+    <title>Image Slider</title>
+    <meta content="WEBSITE RESMI FRIEXLIFE" name="description">
+    <meta content="Friexlife 2022" name="keywords">
+    <link rel="shortcut icon" href="https://pomf2.lain.la/f/jt86daf.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,10 +32,10 @@
                 <img src="./image/img1.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">GALERY SLIDE</div>
-                    <div class="type">FRIEXLIFE</div>
+                    <div class="title">MAGIC SLIDER</div>
+                    <div class="type">FLOWER</div>
                     <div class="description">
-                        Ibham Ganteng🐼
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -44,10 +47,10 @@
                 <img src="./image/img2.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">GALERY SLIDE</div>
-                    <div class="type">FRIEXLIFE</div>
+                    <div class="title">MAGIC SLIDER</div>
+                    <div class="type">NATURE</div>
                     <div class="description">
-                        Ibham Ganteng🐼
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -59,10 +62,10 @@
                 <img src="./image/img4.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">GALERY SLIDE</div>
-                    <div class="type">FRIEXLIFE</div>
+                    <div class="title">MAGIC SLIDER</div>
+                    <div class="type">PLANT</div>
                     <div class="description">
-                        Ibham Ganteng🐼
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
@@ -74,10 +77,10 @@
                 <img src="./image/img3.jpg" alt="">
 
                 <div class="content">
-                    <div class="title">GALERY SLIDE</div>
-                    <div class="type">FRIEXLIFE</div>
+                    <div class="title">MAGIC SLIDER</div>
+                    <div class="type">NATURE</div>
                     <div class="description">
-                        Ibham Ganteng🐼
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                     </div>
                     <div class="button">
                         <button>SEE MORE</button>
