--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <title>Image Slider</title>
     <meta content="WEBSITE RESMI FRIEXLIFE" name="description">
     <meta content="Friexlife 2022" name="keywords">
+    <link href="images/icon.png" rel="icon">
+    <link href="images/icon.png" rel="apple-touch-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/aos/aos.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/remixicon/remixicon.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="https://api.zeeoneofc.my.id/css/style.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://pomf2.lain.la/f/jt86daf.jpg">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
