--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8415747650933613"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
@@ -18,6 +20,7 @@
     <link href="https://api.zeeoneofc.my.id/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="https://api.zeeoneofc.my.id/css/style.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://pomf2.lain.la/f/jt86daf.jpg">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
